--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="안녕하세요. 장우전의 포트폴리오입니다. 😚"
     />
 
     <link
       href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap&subset=korean"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Do+Hyeon&display=swap&subset=korean"
       rel="stylesheet"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
