:zap: Optimize image and add some meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -11,8 +11,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="안녕하세요. 장우전의 포트폴리오입니다. 😚"
+      content="안녕하세요. 개발을 통해 가치를 전달하고 싶은 개발자 장우전의 포트폴리오입니다. 😚"
     />
+    <meta name="keywords" content="우전, 장우전, ujeon, jangujeon" />
+    <meta name="author" content="Ujeon" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap&subset=korean"
