--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,15 @@
     <meta name="author" content="Ujeon" />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap&subset=korean"
+      href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,700,900&display=swap&subset=korean"
       rel="stylesheet"
     />
+
     <link
-      href="https://fonts.googleapis.com/css?family=Do+Hyeon&display=swap&subset=korean"
+      href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap"
       rel="stylesheet"
     />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
