--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="안녕하세요. 개발을 통해 가치를 전달하고 싶은 개발자 장우전의 포트폴리오입니다. 😚"
-    />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -13,8 +10,6 @@
       rel="stylesheet"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="keywords" content="우전, 장우전, ujeon, jangujeon" />
-    <meta name="author" content="Ujeon" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500,700,900&display=swap&subset=korean"
@@ -41,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>우전의 포트폴리오</title>
+    <title>우전 - 포트폴리오</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
